# music-auto

./: .gitignore  AGENTS.md  README.md  config.example.json  mise.toml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/agents/: code-reviewer.md  integration-tester.md  lint-checker.md  security-auditor.md  test-runner.md
.claude/skills/ymd-development/: SKILL.md
.claude/skills/ymd-development/references/: architecture.md  conventions.md  pipeline.md
.claude/skills/ymd-development/templates/: command-template.md  test-template.md
.claude/skills/ymd-development/workflows/: add-command.md  add-provider.md  add-test.md  debug-pipeline.md
src/: __init__.py
src/cli/: __init__.py  main.py  ui.py
src/cli/commands/: auth.py  clean.py  config_cmd.py  doctor.py  search.py  status.py  sync.py
src/core/: auth.py  config.py  download.py  exceptions.py  organizer.py  playlist.py  sync_state.py  tagger.py
src/providers/: __init__.py  youtube.py
tests/: __init__.py  conftest.py  test_auth.py  test_cli_auth.py  test_cli_clean.py  test_cli_config.py  test_cli_doctor.py  test_cli_search.py  test_cli_status.py  test_cli_sync.py  test_config.py  test_download.py  test_integration.py  test_organizer.py  test_provider.py  test_sync_state.py  test_tagger.py  test_ui.py
