[project]
name = "ymd"
version = "0.1.0"
description = "YouTube Music Downloader - Sync and download playlists for DAP"
requires-python = ">=3.12"
dependencies = [
    "typer[all]>=0.12.3",
    "ytmusicapi>=1.10.0",
    "yt-dlp>=2024.3.10",
    "mutagen>=1.47.0",
    "pydantic>=2.9.0",
    "questionary>=2.0.0",
]

[project.scripts]
ymd = "src.cli.main:main"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["ytmusicapi.*", "yt_dlp.*", "mutagen.*", "questionary.*"]
ignore_missing_imports = true
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = ["src.core.tagger"]
disallow_untyped_calls = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
